# ai-lens-helper

./: .gitignore  CLAUDE.md  GUI_USAGE.md  OPENAI_VISION_GUIDE.md  PLAN.md  QUICKSTART.md  README.md  example_crawl_spec.json  gui_app.py  museum_spec.json  pyproject.toml  run_gui.sh  test_inference.py  test_spec.json
configs/: default.yaml
indexes/: index.json  경복궁_clip.faiss
src/ai_lens_helper/: __init__.py  __main__.py  cli.py
src/ai_lens_helper/config/: __init__.py
src/ai_lens_helper/data/: __init__.py
src/ai_lens_helper/infer/: __init__.py  clip_index.py  clip_runner.py  index.py  openai_vision.py  postprocess.py  quality_check.py  runner.py
src/ai_lens_helper/models/: __init__.py  backbones.py  heads.py  losses.py  yolo_clip.py
src/ai_lens_helper/train/: __init__.py  datamodule.py  engine.py  evaluator.py  export.py
src/ai_lens_helper/utils/: image.py  io.py  metrics.py  vis.py
tests/: conftest.py  test_data_validator.py  test_inference_workflow.py
