[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lens-helper"
version = "0.1.0"
description = "Hybrid classification + retrieval toolkit for museum exhibit identification."
readme = "README.md"
authors = [
  {name = "AI Lens Team"}
]
license = {text = "Proprietary"}
requires-python = ">=3.9"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "Pillow>=10.0.0",
  "selenium>=4.15.0",
  "webdriver-manager>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0"
]

[project.scripts]
ai-lens = "ai_lens_helper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py39"]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "N"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
